napari LatAm workshop link

--- a/index.html
+++ b/index.html
@@ -101,6 +101,12 @@
         <a class="button button-default" href="https://biodotpe.github.io/" target="_blank" rel="noopener" role="button"><img class="icon" src="images/icons/generic-website.svg" alt="">Visit Personal Website</a><br>
         
         <br>
+        <p>Calls and Resources</p>
+
+        <!-- napari -->
+        <a class="button button-napari" href="https://librehub.github.io/napari-LatAm-workshop-2023/"  target="_blank" rel="noopener" role="button"><img class="icon" src="images/icons/napari.svg" alt="">napari LatAm Workshop 2023</a><br>
+
+        <br>
         <p>Social Media</p>
 
         <!-- Twitter (archiving soon, see 'X') -->
