Update Google Scholar button

--- a/index.html
+++ b/index.html
@@ -134,7 +134,7 @@
         <p>Research and Development</p>
 
         <!-- Google Scholar -->
-        <a class="button button-google-scholar" href="https://scholar.google.com/citations?user=39muccsAAAAJ&hl=en" target="_blank" rel="noopener" role="button"><img class="icon" src="images/icons/google-scholar.svg" alt="">Google Scholar</a><br>
+        <a class="button button-google-scholar" href="https://scholar.google.com/citations?hl=en&user=sDCEeREAAAAJ" target="_blank" rel="noopener" role="button"><img class="icon" src="images/icons/google-scholar.svg" alt="">Google Scholar</a><br>
         
         <!-- ORCID ID -->
         <a class="button button-orcid-id" href="https://orcid.org/0000-0003-4321-1337"  target="_blank" rel="noopener" role="button"><img class="icon" src="images/icons/orcid-id.svg" alt="">ORCID ID</a><br>
