Update personal website link

--- a/index.html
+++ b/index.html
@@ -98,7 +98,7 @@
 
         -->
         <!-- Generic Website -->
-        <a class="button button-default" href="https://biodotpe.github.io/" target="_blank" rel="noopener" role="button"><img class="icon" src="images/icons/generic-website.svg" alt="">Visit Personal Website</a><br>
+        <a class="button button-default" href="https://biodotpe.github.io/about/" target="_blank" rel="noopener" role="button"><img class="icon" src="images/icons/generic-website.svg" alt="">Visit Personal Website</a><br>
         
         <!--
         <br>
