--- a/index.html
+++ b/index.html
@@ -98,7 +98,7 @@
 
         -->
         <!-- YouTube: Research -->
-        <a class="button button-yt" href="https://youtu.be/3sRGDNoWQ7Y?feature=shared&t=3144" target="_blank" rel="noopener" role="button"><img class="icon" src="images/icons/youtube.svg" alt="">LAMic 2024 - Open-Source Hardware and Droplet Microfluidics</a><br>        
+        <a class="button button-yt" href="https://youtu.be/3sRGDNoWQ7Y?feature=shared&t=3144" target="_blank" rel="noopener" role="button"><img class="icon" src="images/icons/youtube.svg" alt="">LAMic 2024: Open-Source Hardware and Droplet Microfluidics</a><br>        
         
         <!-- YouTube: Outreach -->
         <a class="button button-yt" href="https://youtu.be/Xu9TgBXRVZw?si=LFWSVpKkT19l9_2x&t=2727" target="_blank" rel="noopener" role="button"><img class="icon" src="images/icons/youtube.svg" alt="">OLS-8: Open Science Hardware</a><br>        
